feat: thêm service và dto cho book